--- a/reader.html
+++ b/reader.html
@@ -1,1 +1,45 @@
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <title>Reader Holliday Private Library</title>
+  <link rel="stylesheet" href="assets/css/base.css">
+  <link rel="stylesheet" href="assets/css/themes.css">
+</head>
+<body data-theme="dark">
+  <header class="site-banner">
+    <div class="brand">Holliday Private Library</div>
+    <nav class="main-nav">
+      <a href="index.html">Home</a>
+      <a href="latest.html">Latest</a>
+      <a href="reader.html">Reader</a>
+      <button id="theme-toggle">Theme</button>
+      <button id="notif-btn">🔔<span id="notif-badge" class="badge hidden">•</span></button>
+    </nav>
+  </header>
+
+  <main class="reader container">
+    <article id="reader-article" class="reader-article">Loading...</article>
+    <aside class="reader-actions">
+      <div id="meta"></div>
+      <div class="actions">
+        <button id="like-btn">Like</button>
+        <button id="fav-btn">Favorite</button>
+        <button id="share-btn">Share</button>
+        <div id="unlock-area"></div>
+      </div>
+      <div class="theme-controls">
+        <label>Font size <input id="font-size" type="range" min="14" max="28" value="18"></label>
+      </div>
+    </aside>
+  </main>
+
+  <div id="overlay" class="overlay hidden"></div>
+
+  <script src="assets/js/md-lite.js"></script>
+  <script src="assets/js/crypto-lite.js"></script>
+  <script src="assets/js/app.js"></script>
+</body>
+</html>
 
