--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
       <a href="latest.html">Latest</a>
       <a href="reader.html">Reader</a>
       <button id="theme-toggle" title="Toggle theme">Theme</button>
-      <button id="notif-btn" title="Notifications">🔔<span id="notif-badge" class="badge hidden">•</span></button>
+      <button id="notif-btn" title="Notifications">💌<span id="notif-badge" class="badge hidden">•</span></button>
     </nav>
   </header>
 
   <main class="container">
     <section class="intro">
-      <h1>Welcome</h1>
+      <h1>Holliday Private Library</h1>
       <div id="updates" class="card">Loading updates...</div>
     </section>
 
@@ -32,7 +32,7 @@
   </main>
 
   <script src="assets/js/md-lite.js"></script>
+  <script src="assets/js/crypto-lite.js"></script>
   <script src="assets/js/app.js"></script>
 </body>
 </html>
-
