--- a/latest.html
+++ b/latest.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>Latest Holliday Private Library</title>
+  <title>Latest — Holliday Private Library</title>
   <link rel="stylesheet" href="assets/css/base.css">
   <link rel="stylesheet" href="assets/css/themes.css">
 </head>
@@ -15,7 +15,7 @@
       <a href="latest.html">Latest</a>
       <a href="reader.html">Reader</a>
       <button id="theme-toggle">Theme</button>
-      <button id="notif-btn">🔔<span id="notif-badge" class="badge hidden">•</span></button>
+      <button id="notif-btn">💌<span id="notif-badge" class="badge hidden">•</span></button>
     </nav>
   </header>
 
@@ -24,14 +24,14 @@
       <h1>Library</h1>
       <div class="controls">
         <input id="search" placeholder="Search titles, tags" />
-        <div id="tag-bar"></div>
+        <div id="tag-bar" class="tag-bar"></div>
       </div>
       <div id="cards" class="cards">Loading...</div>
     </section>
   </main>
 
   <script src="assets/js/md-lite.js"></script>
+  <script src="assets/js/crypto-lite.js"></script>
   <script src="assets/js/app.js"></script>
 </body>
 </html>
-
