--- a/reader.html
+++ b/reader.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>Reader Holliday Private Library</title>
+  <title>Reader — Holliday Private Library</title>
   <link rel="stylesheet" href="assets/css/base.css">
   <link rel="stylesheet" href="assets/css/themes.css">
 </head>
@@ -15,20 +15,20 @@
       <a href="latest.html">Latest</a>
       <a href="reader.html">Reader</a>
       <button id="theme-toggle">Theme</button>
-      <button id="notif-btn">🔔<span id="notif-badge" class="badge hidden">•</span></button>
+      <button id="notif-btn">💌<span id="notif-badge" class="badge hidden">•</span></button>
     </nav>
   </header>
 
   <main class="reader container">
     <article id="reader-article" class="reader-article">Loading...</article>
-    <aside class="reader-actions">
+    <aside class="reader-actions card">
       <div id="meta"></div>
       <div class="actions">
         <button id="like-btn">Like</button>
         <button id="fav-btn">Favorite</button>
         <button id="share-btn">Share</button>
-        <div id="unlock-area"></div>
       </div>
+      <div id="unlock-area"></div>
       <div class="theme-controls">
         <label>Font size <input id="font-size" type="range" min="14" max="28" value="18"></label>
       </div>
@@ -42,4 +42,3 @@
   <script src="assets/js/app.js"></script>
 </body>
 </html>
-
